--- a/site/front/package.json
+++ b/site/front/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
     "react-youtube": "^10.1.0",
     "styled-components": "^6.1.13"
   },
